// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkCollection should add links 1`] = `
<DocumentFragment>
  <div
    class="sc-fzqBZW eEiUFK flex flex-col font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex items-center justify-between cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <span
        class="text-lg font-semibold"
      >
        Social Media
      </span>
      <div>
        <div
          class="sc-AxiKw ksjdLL flex items-center justify-center w-5 h-5 text-white rounded-full bg-theme-primary"
          height="10"
          width="10"
        >
          <svg>
            chevron-up.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-2 text-theme-secondary-text"
    >
      Tell people more about yourself through social media
    </div>
    <div
      class="mt-4"
    >
      <div
        class="grid row-gap-4 col-gap-2"
        style="grid-template-columns: 2fr 3fr;"
      >
        <fieldset
          class="sc-AxirZ izhStr flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="type"
          >
            Add media
            <div
              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="relative w-full"
          >
            <input
              class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 sr-only"
              data-testid="select-list__input"
              name="type"
              readonly=""
              type="text"
              value="twitter"
            />
            <div
              class="relative w-full"
            >
              <div
                aria-expanded="true"
                aria-haspopup="listbox"
                aria-owns="downshift-5-menu"
                role="combobox"
              >
                <label
                  for="downshift-4-input"
                  id="downshift-5-label"
                />
                <div
                  class="sc-Axmtr jzhOwR"
                  data-testid="SelectDropdownInput"
                >
                  <span
                    class="sc-AxhUy escgqZ py-3 pl-4 font-normal border border-transparent opacity-50 pointer-events-none"
                    data-testid="SelectDropdownInput__typeahead"
                  >
                    Twitter
                  </span>
                  <input
                    aria-activedescendant="downshift-5-item-0"
                    aria-autocomplete="list"
                    aria-controls="downshift-5-menu"
                    aria-labelledby="downshift-5-label"
                    autocomplete="off"
                    class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 cursor-default"
                    data-testid="SelectDropdownInput__input"
                    id="downshift-4-input"
                    name="type"
                    placeholder="Select option"
                    value="Twitter"
                  />
                </div>
                <ul
                  aria-labelledby="downshift-5-label"
                  class="sc-fznyAO iHcpqi is-open"
                  id="downshift-5-menu"
                  role="listbox"
                >
                  <li
                    aria-selected="true"
                    class="select-list-option cursor-default is-highlighted"
                    data-testid="select-list__toggle-option-0"
                    id="downshift-5-item-0"
                    role="option"
                  >
                    <div
                      class="select-list-option__label"
                    >
                      Twitter
                    </div>
                  </li>
                </ul>
              </div>
              <div
                class="sc-AxhUy sc-AxheI bYHtKZ w-10 pointer-events-none text-theme-neutral"
              >
                <div
                  class="sc-AxiKw jNSjzx transform rotate-180"
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="sc-AxirZ izhStr flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="value"
          >
            Link
            <div
              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <input
            aria-invalid="false"
            class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
            data-testid="LinkCollection__input-link"
            name="value"
          />
        </fieldset>
        <button
          class="sc-AxjAm joLCoM col-span-2"
          color="primary"
          data-testid="LinkCollection__add-link"
          disabled=""
          type="button"
        >
          Add Link
        </button>
      </div>
      <div
        class="sc-fznKkj hAWHmD -mt-3"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
              role="row"
            >
              <th
                class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Name
                  </div>
                  <div
                    class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw GMmVY"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Link
                  </div>
                  <div
                    class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw GMmVY"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top hidden"
                >
                  <div>
                    Actions
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="font-semibold border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
              data-testid="LinkCollection__item"
            >
              <td
                class="w-40"
              >
                <input
                  name="links[0].type"
                  type="hidden"
                  value="twitter"
                />
                Twitter
              </td>
              <td
                class="break-all align-middle"
              >
                <input
                  name="links[0].value"
                  type="hidden"
                  value="https://twitter.com/arkecosystem"
                />
                https://twitter.com/arkecosystem
              </td>
              <td
                class="w-16 text-right align-middle"
              >
                <button
                  class="sc-AxjAm hMpHNk"
                  color="primary"
                  data-testid="LinkCollection__remove-link"
                  type="button"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkCollection should remove links 1`] = `
<DocumentFragment>
  <div
    class="sc-fzqBZW eEiUFK flex flex-col font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex items-center justify-between cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <span
        class="text-lg font-semibold"
      >
        Social Media
      </span>
      <div>
        <div
          class="sc-AxiKw ksjdLL flex items-center justify-center w-5 h-5 text-white rounded-full bg-theme-primary"
          height="10"
          width="10"
        >
          <svg>
            chevron-up.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-2 text-theme-secondary-text"
    >
      Tell people more about yourself through social media
    </div>
    <div
      class="mt-4"
    >
      <div
        class="grid row-gap-4 col-gap-2"
        style="grid-template-columns: 2fr 3fr;"
      >
        <fieldset
          class="sc-AxirZ izhStr flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="type"
          >
            Add media
            <div
              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="relative w-full"
          >
            <input
              class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 sr-only"
              data-testid="select-list__input"
              name="type"
              readonly=""
              type="text"
              value=""
            />
            <div
              class="relative w-full"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="downshift-33-menu"
                role="combobox"
              >
                <label
                  for="downshift-32-input"
                  id="downshift-33-label"
                />
                <div
                  class="sc-Axmtr jzhOwR"
                  data-testid="SelectDropdownInput"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="downshift-33-menu"
                    aria-labelledby="downshift-33-label"
                    autocomplete="off"
                    class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 cursor-default"
                    data-testid="SelectDropdownInput__input"
                    id="downshift-32-input"
                    name="type"
                    placeholder="Select option"
                    value=""
                  />
                </div>
                <ul
                  aria-labelledby="downshift-33-label"
                  class="sc-fznyAO iHcpqi"
                  id="downshift-33-menu"
                  role="listbox"
                />
              </div>
              <div
                class="sc-AxhUy sc-AxheI bYHtKZ w-10 pointer-events-none text-theme-neutral"
              >
                <div
                  class="sc-AxiKw jNSjzx"
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="sc-AxirZ izhStr flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="value"
          >
            Link
            <div
              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <input
            aria-invalid="false"
            class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
            data-testid="LinkCollection__input-link"
            disabled=""
            name="value"
          />
        </fieldset>
        <button
          class="sc-AxjAm joLCoM col-span-2"
          color="primary"
          data-testid="LinkCollection__add-link"
          disabled=""
          type="button"
        >
          Add Link
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkCollection should render 1`] = `
<DocumentFragment>
  <div
    class="sc-fzqBZW eEiUFK flex flex-col font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex items-center justify-between cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <span
        class="text-lg font-semibold"
      >
        Social Media
      </span>
      <div>
        <div
          class="sc-AxiKw ksjdLL flex items-center justify-center w-5 h-5 rounded-full text-theme-primary bg-theme-primary-contrast"
          height="10"
          width="10"
        >
          <svg>
            chevron-down.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-2 text-theme-secondary-text"
    >
      Tell people more about yourself through social media
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkCollection should select a specific link type 1`] = `
<DocumentFragment>
  <div
    class="sc-fzqBZW eEiUFK flex flex-col font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex items-center justify-between cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <span
        class="text-lg font-semibold"
      >
        Social Media
      </span>
      <div>
        <div
          class="sc-AxiKw ksjdLL flex items-center justify-center w-5 h-5 text-white rounded-full bg-theme-primary"
          height="10"
          width="10"
        >
          <svg>
            chevron-up.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-2 text-theme-secondary-text"
    >
      Tell people more about yourself through social media
    </div>
    <div
      class="mt-4"
    >
      <div
        class="grid row-gap-4 col-gap-2"
        style="grid-template-columns: 2fr 3fr;"
      >
        <fieldset
          class="sc-AxirZ izhStr flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="type"
          >
            Add media
            <div
              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <div
            class="relative w-full"
          >
            <input
              class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 sr-only"
              data-testid="select-list__input"
              name="type"
              readonly=""
              type="text"
              value=""
            />
            <div
              class="relative w-full"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="downshift-89-menu"
                role="combobox"
              >
                <label
                  for="downshift-88-input"
                  id="downshift-89-label"
                />
                <div
                  class="sc-Axmtr jzhOwR"
                  data-testid="SelectDropdownInput"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="downshift-89-menu"
                    aria-labelledby="downshift-89-label"
                    autocomplete="off"
                    class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 cursor-default"
                    data-testid="SelectDropdownInput__input"
                    id="downshift-88-input"
                    name="type"
                    placeholder="Select option"
                    value=""
                  />
                </div>
                <ul
                  aria-labelledby="downshift-89-label"
                  class="sc-fznyAO iHcpqi"
                  id="downshift-89-menu"
                  role="listbox"
                />
              </div>
              <div
                class="sc-AxhUy sc-AxheI bYHtKZ w-10 pointer-events-none text-theme-neutral"
              >
                <div
                  class="sc-AxiKw jNSjzx"
                  height="5"
                  width="7"
                >
                  <svg>
                    caret-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="sc-AxirZ izhStr flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="value"
          >
            Link
            <div
              class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
              data-testid="FormLabel__required"
            />
          </label>
          <input
            aria-invalid="false"
            class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
            data-testid="LinkCollection__input-link"
            disabled=""
            name="value"
          />
        </fieldset>
        <button
          class="sc-AxjAm joLCoM col-span-2"
          color="primary"
          data-testid="LinkCollection__add-link"
          disabled=""
          type="button"
        >
          Add Link
        </button>
      </div>
      <div
        class="sc-fznKkj hAWHmD -mt-3"
        role="table"
      >
        <table
          cellpadding="0"
          class="table-auto"
        >
          <thead>
            <tr
              class="border-b border-theme-neutral-300 dark:border-theme-neutral-800"
              role="row"
            >
              <th
                class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                colspan="1"
                data-testid="table__th--0"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Primary
                  </div>
                  <div
                    class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw GMmVY"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                colspan="1"
                data-testid="table__th--1"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Name
                  </div>
                  <div
                    class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw GMmVY"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                colspan="1"
                data-testid="table__th--2"
                role="columnheader"
                style="cursor: pointer;"
                title="Toggle SortBy"
              >
                <div
                  class="flex flex-inline align-top "
                >
                  <div>
                    Link
                  </div>
                  <div
                    class="flex items-center ml-2 text-theme-neutral dark:text-theme-neutral-dark"
                    data-testid="table__Sort"
                  >
                    <div
                      class="sc-AxiKw GMmVY"
                      height="12"
                      width="15"
                    >
                      <svg>
                        sort.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </th>
              <th
                class="relative text-sm text-left select-none text-theme-neutral border-theme-neutral-300 dark:text-theme-neutral-dark dark:border-theme-neutral-800 m-0 p-3 first:pl-0 last:pr-0 font-semibold hasBorder"
                colspan="1"
                data-testid="table__th--3"
                role="columnheader"
              >
                <div
                  class="flex flex-inline align-top hidden"
                >
                  <div>
                    Actions
                  </div>
                </div>
              </th>
            </tr>
          </thead>
          <tbody
            role="rowgroup"
          >
            <tr
              class="font-semibold border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
              data-testid="LinkCollection__item"
            >
              <td
                class="w-16 text-center align-middle"
              >
                <input
                  class="sc-fzpans ioBrsH"
                  color="success"
                  data-testid="LinkCollection__selected"
                  type="radio"
                />
              </td>
              <td
                class="w-40"
              >
                <input
                  name="links[0].type"
                  type="hidden"
                  value="twitter"
                />
                Twitter
              </td>
              <td
                class="break-all align-middle"
              >
                <input
                  name="links[0].value"
                  type="hidden"
                  value="testing link"
                />
                testing link
              </td>
              <td
                class="w-16 text-right align-middle"
              >
                <button
                  class="sc-AxjAm hMpHNk"
                  color="primary"
                  data-testid="LinkCollection__remove-link"
                  type="button"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </button>
              </td>
            </tr>
            <tr
              class="font-semibold border-b border-dashed last:border-b-0 border-theme-neutral-300 dark:border-theme-neutral-800"
              data-testid="LinkCollection__item"
            >
              <td
                class="w-16 text-center align-middle"
              />
              <td
                class="w-40"
              >
                <input
                  name="links[1].type"
                  type="hidden"
                  value="facebook"
                />
                Facebook
              </td>
              <td
                class="break-all align-middle"
              >
                <input
                  name="links[1].value"
                  type="hidden"
                  value="testing link 2"
                />
                testing link 2
              </td>
              <td
                class="w-16 text-right align-middle"
              >
                <button
                  class="sc-AxjAm hMpHNk"
                  color="primary"
                  data-testid="LinkCollection__remove-link"
                  type="button"
                >
                  <div
                    class="sc-AxiKw dzBdqj"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      trash.svg
                    </svg>
                  </div>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LinkCollection should toggle open/close link collection 1`] = `
<DocumentFragment>
  <div
    class="sc-fzqBZW eEiUFK flex flex-col font-normal"
    data-testid="LinkCollection"
  >
    <div
      class="flex items-center justify-between cursor-pointer"
      data-testid="LinkCollection__header"
    >
      <span
        class="text-lg font-semibold"
      >
        Social Media
      </span>
      <div>
        <div
          class="sc-AxiKw ksjdLL flex items-center justify-center w-5 h-5 rounded-full text-theme-primary bg-theme-primary-contrast"
          height="10"
          width="10"
        >
          <svg>
            chevron-down.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="mt-2 text-theme-secondary-text"
    >
      Tell people more about yourself through social media
    </div>
  </div>
</DocumentFragment>
`;
